@@ -1,3 +1,7 @@
+2004-08-18  Thiemo Seufer  <seufer@csv.ica.uni-stuttgart.de>
+	* config/tc-mips.c (append_insn): Handle delay slots in branch likely
+	correctly.
+
 2004-07-28  Jason Thorpe  <thorpej@wasabisystems.com>
 
 	* config/tc-hppa.h (TARGET_FORMAT): Set to "elf32-hppa-netbsd"
